--- a/presentation_2.tex
+++ b/presentation_2.tex
@@ -177,14 +177,14 @@ shadow
 %------------------------------------------------
 
 %----------------------------------------------------------------------------------------
-%	PRESENTATION INFORMATION
+%	PRESENTER INFORMATION
 %----------------------------------------------------------------------------------------
 
-\newcommand*{\mytitle}{ELP-IS} % Title
-\newcommand*{\runninghead}{IS Letenky} % Running head displayed on almost all slides
-\newcommand*{\myauthor}{Jiří Sekerka} % Presenters name(s)
+\newcommand*{\mytitle}{Transcriptomic Analysis for Prognostic Value in Head and Neck Squamous Cell Carcinoma} % Title
+\newcommand*{\runninghead}{HNSCC Biomarker} % Running head displayed on almost all slides
+\newcommand*{\myauthor}{Tex Li-Hsing Chi} % Presenters name(s)
 \newcommand*{\mydate}{\today} % Presentation date
-\newcommand*{\myuni}{SEK0026 VŠB} % University or department
+\newcommand*{\myuni}{Taipei Medical University} % University or department
 
 %----------------------------------------------------------------------------------------
 
@@ -197,17 +197,20 @@ shadow
 % Title slide - you may have to tweak a few of the numbers if you wish to make changes to the layout
 \thispagestyle{empty} % No slide header and footer
 \begin{tikzpicture}[remember picture,overlay] % Background box
-\node [xshift=\paperwidth/2,yshift=\paperheight/2] at (current page.south west)[rectangle,fill,inner sep=0pt,minimum width=\paperwidth,minimum height=\paperheight/3,top color=mygreen,bottom color=mygreen]{}; % Change the height of the box, its colors and position on the page here
+\node [xshift=\paperwidth/2,yshift=\paperheight/2] at (current page.south west)[rectangle,fill,inner sep=0pt,minimum width=\paperwidth,minimum height=0.65\paperheight,top color=mygreen,bottom color=mygreen]{}; % Change the height of the box, its colors and position on the page here
 \end{tikzpicture}
 % Text within the box
 \begin{flushright}
-\vspace{0.6cm}
+\vspace{0.2cm}
 \color{white}\sffamily
 {\bfseries\Large\mytitle\par} % Title
 \vspace{0.5cm}
 \normalsize
+\mydate\par
+%\vspace{3mm} 
 \myauthor\par % Author name
-\mydate\par % Date
+ % Date
+\myuni\par % TMU
 \vfill
 \end{flushright}
 
