--- a/presentation_2.tex
+++ b/presentation_2.tex
@@ -39,8 +39,10 @@ parskip=half-, % Paragraphs separated by half a line
 
 \usepackage{subcaption} % for figure  side by side, subfigure
 
+%%%%%%
+%------------------------------------------------
 % Colors
-\usepackage{xcolor}	 % Required for custom colors
+\usepackage[table]{xcolor}   % Required for custom colors
 % Define a few colors for making text stand out within the presentation
 \definecolor{mygreen}{RGB}{44,85,17}
 \definecolor{myblue}{RGB}{34,31,217}
@@ -51,137 +53,114 @@ parskip=half-, % Paragraphs separated by half a line
 \newcommand*{\myblue}[1]{\textcolor{myblue}{#1}}
 \newcommand*{\mybrown}[1]{\textcolor{mybrown}{#1}}
 \newcommand*{\myred}[1]{\textcolor{myred}{#1}}
-%------------------------------------------------
 
-%------------------------------------------------
 % Margins
 \usepackage[ % Page margins settings
-includeheadfoot,
-top=3.5mm,
-bottom=3.5mm,
-left=5.5mm,
-right=5.5mm,
-headsep=6.5mm,
-footskip=8.5mm
+  includeheadfoot,
+  top=-1mm,
+  bottom=1.5mm,
+  left=1mm,
+  right=3.5mm,
+  headsep=0mm,
+  footskip=8.5mm
 ]{geometry}
-%------------------------------------------------
 
-%------------------------------------------------
 % Fonts
-\usepackage[T1]{fontenc}	 % For correct hyphenation and T1 encoding
+\usepackage[T1]{fontenc}     % For correct hyphenation and T1 encoding
 \usepackage{lmodern} % Default font: latin modern font
 %\usepackage{fourier} % Alternative font: utopia
 %\usepackage{charter} % Alternative font: low-resolution roman font
 \renewcommand{\familydefault}{\sfdefault} % Sans serif - this may need to be commented to see the alternative fonts
-%------------------------------------------------
 
-%------------------------------------------------
 % Various required packages
 \usepackage{amsthm} % Required for theorem environments
 \usepackage{bm} % Required for bold math symbols (used in the footer of the slides)
-\usepackage{graphicx} % Required for including images in figures
-\usepackage{tikz} % Required for colored boxes
+\usepackage{tikz} % Required for colored boxes, loads graphicx and other packages
 \usepackage{booktabs} % Required for horizontal rules in tables
 \usepackage{multicol} % Required for creating multiple columns in slides
 \usepackage{lastpage} % For printing the total number of pages at the bottom of each slide
-\usepackage[english]{babel} % Document language - required for customizing section titles
+
 \usepackage{microtype} % Better typography
-\usepackage{tocstyle} % Required for customizing the table of contents
-\usepackage[utf8]{inputenc}
 
-%------------------------------------------------
-
-%------------------------------------------------
 % Slide layout configuration
-\usepackage{scrpage2} % Required for customization of the header and footer
-\pagestyle{scrheadings} % Activates the pagestyle from scrpage2 for custom headers and footers
-\clearscrheadfoot % Remove the default header and footer
-\setkomafont{pageheadfoot}{\normalfont\color{black}\sffamily} % Font settings for the header and footer
+\usepackage[automark]{scrlayer-scrpage} % Required for customization of the header and footer
+\clearpairofpagestyles % Remove the default header and footer
+\AddLayersAtBeginOfPageStyle{scrheadings}{headerbg,footerbg}% add background layers
+\setkomafont{pageheadfoot}{\normalfont\sffamily} % Font settings for the header and footer
+\setkomafont{pagehead}{\color{white}}
+% Header configuration - if you don't want a header remove this block
+\DeclareNewLayer[
+  background,
+  head,
+  hoffset=0pt,
+  width=\paperwidth,
+  mode=picture,
+  contents=\putLL{\myblue{\rule{\layerwidth}{\layerheight}}}
+]{headerbg}
+
+\ihead{\rightbotmark}
+
+% Footer configuration
+\KOMAoptions{footwidth=\textwidth+2mm:0pt}
+\setkomafont{pagefoot}{\color{black}\tiny} % Small font size for the footnote
+%\DeclareNewLayer[
+  %background,
+  %foot,
+  %hoffset=0pt,
+  %width=\paperwidth,
+  %mode=picture,
+  %contents=\putLL{\myblue{\rule{\layerwidth}{\layerheight}}}
+%]{footerbg}
+\ifoot{\myauthor\ \raisebox{0.2mm}{$\bm{\vert}$}\ \myuni} % Left side text
+\ofoot*{\pagemark/\pageref{LastPage}} % Right side
 
 % Sets vertical centering of slide contents with increased space between paragraphs/lists
 \makeatletter
 \renewcommand*{\@textbottom}{\vskip \z@ \@plus 1fil}
 \newcommand*{\@texttop}{\vskip \z@ \@plus .5fil}
-\addtolength{\parskip}{\z@\@plus .25fil}
+\setparsizes{1em}{\z@\@plus .25fil}{0pt plus 1fil}
 \makeatother
 
 % Remove page numbers and the dots leading to them from the outline slide
-\makeatletter
-\newtocstyle[noonewithdot]{nodotnopagenumber}{\settocfeature{pagenumberbox}{\@gobble}}
-\makeatother
-\usetocstyle{nodotnopagenumber}
+\DeclareTOCStyleEntries[linefill=\hfill,pagenumberbox=\gobble]{section}{section,subsection,subsubsection}
+\newcommand*\gobble[1]{}
+\AfterTOCHead{\small}
 
-\AtBeginDocument{\renewcaptionname{english}{\contentsname}{\Large Vize}} % Change the name of the table of contents
-%------------------------------------------------
-
-%------------------------------------------------
-% Header configuration - if you don't want a header remove this block
-\ihead{
-\hspace{-2mm}
-\begin{tikzpicture}[remember picture,overlay]
-\node [xshift=\paperwidth/2,yshift=-\headheight] (mybar) at (current page.north west)[rectangle,fill,inner sep=0pt,minimum width=\paperwidth,minimum height=2\headheight,top color=mygreen!64,bottom color=mygreen]{}; % Colored bar
-\node[below of=mybar,yshift=3.3mm,rectangle,shade,inner sep=0pt,minimum width=128mm,minimum height =1.5mm,top color=black!50,bottom color=white]{}; % Shadow under the colored bar
-shadow
-\end{tikzpicture}
-\color{white}\runninghead} % Header text defined by the \runninghead command below and colored white for contrast
-%------------------------------------------------
-
-%------------------------------------------------
-% Footer configuration
-\setlength{\footheight}{8mm} % Height of the footer
-\addtokomafont{pagefoot}{\footnotesize} % Small font size for the footnote
-
-\ifoot{% Left side
-\hspace{-2mm}
-\begin{tikzpicture}[remember picture,overlay]
-\node [xshift=\paperwidth/2,yshift=\footheight] at (current page.south west)[rectangle,fill,inner sep=0pt,minimum width=\paperwidth,minimum height=3pt,top color=mygreen,bottom color=mygreen]{}; % Green bar
-\end{tikzpicture}
-\myauthor\ \raisebox{0.2mm}{$\bm{\vert}$}\ \myuni % Left side text
-}
-
-\ofoot[\pagemark/\pageref{LastPage}\hspace{-2mm}]{\pagemark/\pageref{LastPage}\hspace{-2mm}} % Right side
-%------------------------------------------------
-
-%------------------------------------------------
+\renewcaptionname{english}{\contentsname}{Outline} % Change the name of the table of contents
 % Section spacing - deeper section titles are given less space due to lesser importance
-\usepackage{titlesec} % Required for customizing section spacing
-\titlespacing{\section}{0mm}{0mm}{0mm} % Lengths are: left, before, after
-\titlespacing{\subsection}{0mm}{0mm}{-1mm} % Lengths are: left, before, after
-\titlespacing{\subsubsection}{0mm}{0mm}{-2mm} % Lengths are: left, before, after
-\setcounter{secnumdepth}{2} % How deep sections are numbered, set to no numbering by default - change to 1 for numbering sections, 2 for numbering sections and subsections, etc
-%------------------------------------------------
+\RedeclareSectionCommands[beforeskip=0pt,afterskip=0pt,afterindent=true,runin=false]{section,subsection,subsubsection}
+\RedeclareSectionCommand[afterskip=-1mm]{subsection}
+\RedeclareSectionCommand[afterskip=-2mm]{subsubsection}
+\setcounter{secnumdepth}{\partnumdepth} % How deep sections are numbered
 
-%------------------------------------------------
 % Theorem style
 \newtheoremstyle{mythmstyle} % Defines a new theorem style used in this template
-{0.5em} % Space above
-{0.5em} % Space below
-{} % Body font
-{} % Indent amount
-{\sffamily\bfseries} % Head font
-{} % Punctuation after head
-{\newline} % Space after head
-{\thmname{#1}\ \thmnote{(#3)}} % Head spec
-	
+  {0.5em} % Space above
+  {0.5em} % Space below
+  {} % Body font
+  {} % Indent amount
+  {\sffamily\bfseries} % Head font
+  {} % Punctuation after head
+  {\newline} % Space after head
+  {\thmname{#1}\ \thmnote{(#3)}} % Head spec
+
 \theoremstyle{mythmstyle} % Change the default style of the theorem to the one defined above
 \newtheorem{theorem}{Theorem}[section] % Label for theorems
 \newtheorem{remark}[theorem]{Remark} % Label for remarks
 \newtheorem{algorithm}[theorem]{Algorithm} % Label for algorithms
-\makeatletter % Correct qed adjustment
-%------------------------------------------------
 
-%------------------------------------------------
+
 % The code for the box which can be used to highlight an element of a slide (such as a theorem)
-\newcommand*{\mybox}[2]{ % The box takes two arguments: width and content
-\par\noindent
-\begin{tikzpicture}[mynodestyle/.style={rectangle,draw=mygreen,thick,inner sep=2mm,text justified,top color=white,bottom color=white,above}]\node[mynodestyle,at={(0.5*#1+2mm+0.4pt,0)}]{ % Box formatting
-\begin{minipage}[t]{#1}
-#2
-\end{minipage}
-};
-\end{tikzpicture}
+\newcommand*{\mybox}[2]{% The box takes two arguments: width and content
+  \par\noindent
+  \begin{tikzpicture}[mynodestyle/.style={rectangle,draw=myblue,thick,inner sep=2mm,text justified,top color=white,bottom color=white,above}]
+    \node[mynodestyle,at={(0.5*#1+2mm+0.4pt,0)}]{% Box formatting
+      \begin{minipage}[t]{#1}
+      #2
+      \end{minipage}%
+    };
+  \end{tikzpicture}
 \par\vspace{-1.3em}}
-%------------------------------------------------
 
 %----------------------------------------------------------------------------------------
 %	PRESENTER INFORMATION
@@ -238,40 +217,18 @@ shadow
 %	PRESENTATION SLIDES
 %----------------------------------------------------------------------------------------
 
-\section*{Vize}
+%\section*{Vize}
 
-\clearpage
+%\clearpage
+
+%------------------------------------------------
+
+
 
 %------------------------------------------------
 
 
-
-%------------------------------------------------
-
-\subsection*{Bullet Points and Numbered Lists}
-%\begin{enumerate}
-%\end{enumerate}
-%\begin{itemize}
-%\end{itemize}
-%\item Lorem ipsum dolor sit amet, consectetur adipiscing elit
-
-\begin{outline}
-
-\1 Aliquam blandit faucibus nisi, sit amet dapibus enim tempus eu
-
-\2 Nulla commodo, erat quis gravida posuere
-\1 elit lacus lobortis est, quis porttitor odio mauris at libero
-\1 Nam cursus est eget velit posuere pellentesque
-\1 Vestibulum faucibus velit a augue condimentum quis convallis nulla gravida
-
-\end{outline}
-
-
-\clearpage
-
-%------------------------------------------------
-
-\subsection*{Verbatim}
+\section*{Verbatim}
 
 How to include a theorem in this presentation:
 \begin{verbatim}
